scripts/nullaway/annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8.txt
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/project/hospital/Hospital.java:97: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/project/hospital/Hospital.java:264: error: [NullAway] @NonNull field Hospital$Department.waitingRoom not initialized
		protected WaitingRoom waitingRoom;
		                      ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/project/hospital/Hospital.java:265: error: [NullAway] @NonNull field Hospital$Department.wardsForSingle not initialized
		protected LinkedList<Ward> wardsForSingle;
		                           ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/project/hospital/Hospital.java:266: error: [NullAway] @NonNull field Hospital$Department.wardsForMulti not initialized
		protected LinkedList<Ward> wardsForMulti;
		                           ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/project/hospital/Hospital.java:267: error: [NullAway] @NonNull field Hospital$Department.deviceList not initialized
		protected LinkedList<Device> deviceList;
		                             ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/project/hospital/Hospital.java:355: error: [NullAway] passing @Nullable parameter 'targetDevice' where @NonNull is required
				if(device.equals(targetDevice) && device.getAmount()>0) return device;
				                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/project/hospital/Hospital.java:378: error: [NullAway] dereferenced expression this.name is @Nullable
			return this.name.compareTo(dep.name);
			                ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/project/hospital/Hospital.java:536: error: [NullAway] dereferenced expression department.getName() is @Nullable
			if(department.getName().equals(depName)) return department;
			                       ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/project/hospital/Hospital.java:553: error: [NullAway] dereferenced expression department is @Nullable
		department.addPatient(p);
		          ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/LinkedList.java:46: error: [NullAway] initializer method does not guarantee @NonNull field head (line 43) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public LinkedList() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/LinkedList.java:31: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return el2;
			^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/LinkedList.java:47: error: [NullAway] assigning @Nullable expression to @NonNull field
		head = null;
		     ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/LinkedList.java:52: error: [NullAway] passing @Nullable parameter 'o' where @NonNull is required
		head = new ListElement(o, head);
		                       ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/LinkedList.java:82: error: [NullAway] assigning @Nullable expression to @NonNull field
			head = null;
			     ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/LinkedList.java:144: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/EdgeGraph.java:66: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/BinaryTree.java:101: error: [NullAway] dereferenced expression node.getParentNode() is @Nullable
		if(node == node.getParentNode().leftTreeNode)
		                               ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/BinaryTree.java:121: error: [NullAway] dereferenced expression current is @Nullable
		while (current.getRightTree() != null) {
		              ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/BinaryTree.java:128: error: [NullAway] dereferenced expression findNode(target, rootTreeNode) is @Nullable
		return findNode(target, rootTreeNode).value;
		                                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/DoubleLinkedList.java:66: error: [NullAway] initializer method does not guarantee @NonNull field head (line 62) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DoubleLinkedList() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/DoubleLinkedList.java:21: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.nextElement = next;
			                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/DoubleLinkedList.java:67: error: [NullAway] assigning @Nullable expression to @NonNull field
		this.head = null;
		          ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/DoubleLinkedList.java:95: error: [NullAway] dereferenced expression tail is @Nullable
		tail = tail.preElement;
		           ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/DoubleLinkedList.java:96: error: [NullAway] assigning @Nullable expression to @NonNull field
		if(tail != null) tail.nextElement = null; 
		                                  ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/DoubleLinkedList.java:186: error: [NullAway] dereferenced expression element is @Nullable
						element = element.preElement;
						                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/util/structure/DoubleLinkedList.java:187: error: [NullAway] dereferenced expression tmp is @Nullable
						return tmp.data;
						          ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/urlff74b96b0d_HugoFeng_HospitalProject_tgz-pJ8-hugo_project_hospital_ProjectTestJ8/src/hugo/project/hospital/Hospital.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
26 errors
